welcome header creation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>m-store | Passion for McLarenF1</title>
     <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="stylesheet" href="./src/style/style-present.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
@@ -38,11 +39,11 @@
         </nav>
     </header>
     <main>
-        <section class="headre-present">
+        <section class="header-present">
             <div class="contain-text">
-                <h1 class="title">WINTER SALE. HUGE SAVINGS</h1>
+                <h1 class="title">WINTER SALE. HUGE <br>SAVINGS</h1>
                 <p>It's not too late to treat yourself or that special McLaren fan in your life.</p>
-                <a href="#">SHOP NOW</a>
+                <a class="btn" href="#">SHOP NOW</a>
             </div>
         </section>
     </main>
