--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>m-store | Passion for McLarenF1</title>
     <link rel="stylesheet" href="./src/style/style.css">
     <link rel="stylesheet" href="./src/style/style-present.css">
+    <link rel="stylesheet" href="./src/style/style-products.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ec2bf2b54a.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
     <header>
         <div class="login">
             <p>Shipping to all of Chile on all orders over 97192 CL$</p>
@@ -38,12 +40,29 @@
             </figure>
         </nav>
     </header>
+
     <main>
         <section class="header-present">
             <div class="contain-text">
                 <h1 class="title">WINTER SALE. HUGE <br>SAVINGS</h1>
                 <p>It's not too late to treat yourself or that special McLaren fan in your life.</p>
                 <a class="btn" href="#">SHOP NOW</a>
+            </div>
+        </section>
+        <div class="title-products">
+            <p>Products</p>
+            <h1>POPULAR HEADWEAR RIGHT NOW</h1>
+        </div>
+        <section class="product">
+            <div class="card">
+                <figure class="contein-Img">
+                    <img src="./public/assets/headwear1.png" alt="" class="img-Card">
+                </figure>
+                <h2 class="name-Product">TEAM 9FORTY CAP</h2>
+                <div>
+                    <p class="price">$29,900</p>
+                    <button class="buy">Buy</button>
+                </div>
             </div>
         </section>
     </main>
