Creation of product cards eadwear section

--- a/index.html
+++ b/index.html
@@ -53,19 +53,25 @@
             <p>Products</p>
             <h1>POPULAR HEADWEAR RIGHT NOW</h1>
         </div>
-        <section class="product">
+        <section id="products" class="product">
             <div class="card">
                 <figure class="contein-Img">
-                    <img src="./public/assets/headwear1.png" alt="" class="img-Card">
+                    <img src="" alt="" class="img-Card">
                 </figure>
-                <h2 class="name-Product">TEAM 9FORTY CAP</h2>
+                <h2 class="name-Product"></h2>
                 <div>
-                    <p class="price">$29,900</p>
+                    <p class="price">$ </p>
                     <button class="buy">Buy</button>
                 </div>
             </div>
         </section>
+        <div class="title-products">
+            <p>Products</p>
+            <h1>POPULAR JUMPERS RIGHT NOW</h1>
+        </div>
     </main>
     <footer></footer>
+
+    <script src="./src/utils/main.js" type="module"></script>
 </body>
 </html>
