Creation of product cards jumpers section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
             <p>Products</p>
             <h1>POPULAR JUMPERS RIGHT NOW</h1>
         </div>
+        <section id="productsTwo" class="product">
+            <div class="card">
+                <figure class="contein-Img">
+                    <img src="" alt="" class="img-Card">
+                </figure>
+                <h2 class="name-Product"></h2>
+                <div>
+                    <p class="price">$ </p>
+                    <button class="buy">Buy</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 
