Creation of the footer section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+
+    <footer>
+        <section class="nav-containerFooter">
+            <p class="conteinItemFooter">copyright © Yorman Amaro, Made wtih <i class="fa-solid fa-heart"></i></p>
+            <figure class="logo-marca">
+                <img src="./public/assets/logo-marca.png" alt="logo-compani">
+            </figure>
+        </section>
+    </footer>
 
     <script src="./src/utils/main.js" type="module"></script>
 </body>
