Creation of the shopping cart section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
             <ul class="conteinItem">
                 <li class="item">HEADWEAR</li>
                 <li class="item">JUMPERS</li>
-                <li class="item">CARRITO</li>
+                <li>
+                    <a class="item" href="./shoppingCart.html">
+                        <i class="bi bi-cart-fill"></i> CARRITO <span id="numerito" class="numerito">0</span>
+                    </a>
+                </li>
             </ul>
             <figure class="logo-marca">
                 <img src="./public/assets/logo-marca.png" alt="logo-compani">
@@ -49,10 +53,12 @@
                 <a class="btn" href="#">SHOP NOW</a>
             </div>
         </section>
+
         <div class="title-products">
             <p>Products</p>
             <h1>POPULAR HEADWEAR RIGHT NOW</h1>
         </div>
+
         <section id="products" class="product">
             <div class="card">
                 <figure class="contein-Img">
@@ -65,10 +71,12 @@
                 </div>
             </div>
         </section>
+
         <div class="title-products">
             <p>Products</p>
             <h1>POPULAR JUMPERS RIGHT NOW</h1>
         </div>
+
         <section id="productsTwo" class="product">
             <div class="card">
                 <figure class="contein-Img">
@@ -81,6 +89,7 @@
                 </div>
             </div>
         </section>
+
     </main>
 
     <footer>
