car shopping dom

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <section id="products" class="product">
-            <div class="card">
+            <div id="contenedor-productos" class="card">
                 <figure class="contein-Img">
                     <img src="" alt="" class="img-Card">
                 </figure>
@@ -101,6 +101,6 @@
         </section>
     </footer>
 
-    <script src="./src/utils/main.js" type="module"></script>
+    <script src="./src/utils/data.js"></script>
 </body>
 </html>
