--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -1,74 +1,84 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>m-store-Shoppingcart | Passion for McLarenF1</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <title>m-store | Passion for McLarenF1</title>
     <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="stylesheet" href="./src/style/style-present.css">
+    <link rel="stylesheet" href="./src/style/style-products.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ec2bf2b54a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
 
     <div class="wrapper">
-        <header class="header-mobile">
-            <h1 class="logo">mclaren-store</h1>
-            <button class="open-menu" id="open-menu">
-                <i class="bi bi-list"></i>
-            </button>
-        </header>
         <aside>
-            <button class="close-menu" id="close-menu">
-                <i class="bi bi-x"></i>
-            </button>
             <header>
-                <h1 class="logo">mclaren-store</h1>
+                <h1 class="logo">Passion for McLarenF1</h1>
             </header>
             <nav>
                 <ul>
-                    <li>
-                        <a class="boton-menu boton-volver" href="./index.html">
-                            <i class="bi bi-arrow-return-left"></i> Continue Shopping
-                        </a>
-                    </li>
-                    <li>
-                        <a class="boton-menu boton-carrito active" href="./carrito.html">
-                            <i class="bi bi-cart-fill"></i> Carrito
-                        </a>
-                    </li>
+                    <li><a class="boton-menu boton-volver" href="./index.html"><i class="bi bi-arrow-return-left"></i> Seguir Comprando </a></li>
+                    <li><a class="boton-menu boton-carrito active" href="./carrito.html"><i class="bi bi-cart-fill"></i> Carrito <span class="numerito">0</span></a></li>
                 </ul>
             </nav>
             <footer>
                 <p class="texto-footer">© 2022 Yorman Amaro</p>
             </footer>
         </aside>
+
         <main class="main-two">
             <h2 class="titulo-principal">Carrito</h2>
             <div class="contenedor-carrito">
-                <p id="carrito-vacio" class="carrito-vacio">Your Shopping Cart is Empty. <i class="bi bi-emoji-frown"></i></p>
-
-                <div id="carrito-productos" class="carrito-productos disabled">
-                    <!-- Esto se va a completar con el JS -->
+                <p class="carrito-vacio">Your shopping cart is empty<i class="bi bi-emoji-frown"></i></p>
+                <div class="carrito-productos disabled">
+                    <div class="carrito-producto">
+                        <img class="carrito-producto-imagen" src="./public/assets/imgProducts/headwear1.png" alt="">
+                        <div class="carrito-producto-titulo">
+                            <small>Titulo</small>
+                            <h3>Abrigo 01</h3>
+                        </div>
+                        <div class="carrito-producto-cantidad">
+                            <small>Cantidad</small>
+                            <p>1</p>
+                        </div>
+                        <div class="carrito-producto-precio">
+                            <small>Precio</small>
+                            <p>$1000</p>
+                        </div>
+                        <div class="carrito-producto-subtotal">
+                            <small>Subtotal</small>
+                            <p>$1000</p>
+                        </div>
+                        <button class="carrito-producto-eliminar"><i class="bi bi-trash-fill"></i></button>
+                    </div>
                 </div>
 
-                <div id="carrito-acciones" class="carrito-acciones disabled">
+                <div class="carrito-acciones disabled">
                     <div class="carrito-acciones-izquierda">
-                        <button id="carrito-acciones-vaciar" class="carrito-acciones-vaciar">Vaciar carrito</button>
+                        <button class="carrito-acciones-vaciar">Empty shopping cart</button>
                     </div>
                     <div class="carrito-acciones-derecha">
                         <div class="carrito-acciones-total">
-                            <p>Total:</p>
+                            <p>Total</p>
                             <p id="total">$3000</p>
                         </div>
-                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar ahora</button>
+                        <button class="carrito-acciones-comprar">Shopping Now</button>
                     </div>
                 </div>
 
-                <p id="carrito-comprado" class="carrito-comprado disabled">Muchas gracias por tu compra. <i class="bi bi-emoji-laughing"></i></p>
+                <p class="carrito-comprado disabled">Thank you very much for your purchase <i class="bi bi-emoji-heart-eyes-fill"></i></p>
 
             </div>
         </main>
     </div>
 
+
+<script src="./src/utils/data.js"></script>
 </body>
 </html>
