actualizacion 1 de funcion

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
         <nav class="nav-container">
             <ul class="conteinItem">
-                <li class="item"> <a href="#headwear">HEADWEAR</a> HEADWEAR</li>
-                <li class="item"> <a href="#jumpers">JUMPERS</a> JUMPERS</li>
+                <li id="gorras" class="item"> <a href="#headwear">HEADWEAR</a> HEADWEAR</li>
+                <li id="sueter" class="item"> <a href="#jumpers">JUMPERS</a> JUMPERS</li>
                 <li>
                     <a class="item active" href="./shoppingCart.html">
                         <i class="item bi bi-cart-fill"></i> CARRITO <span id="numerito" class="numerito">0</span>
